Add timestamps to the logs generated, and append the log file

--- a/charts/podiumd/templates/openformulieren-tempjob.yaml
+++ b/charts/podiumd/templates/openformulieren-tempjob.yaml
@@ -59,7 +59,7 @@ spec:
             {{- end }} 
           # Django job commands ->  
           command: ["/bin/bash", "-c"]
-          args: ["{{ (default "echo no command provided" .Values.openformulieren.tempjobdjango.bashCommand) }}{{ if (default false .Values.openformulieren.tempjobdjango.logging.enabled ) }} 2>&1 | tee /app/log/tempjobdjango.log{{ end }}"]
+          args: ["{{ (default "echo no command provided" .Values.openformulieren.tempjobdjango.bashCommand) }}{{ if (default false .Values.openformulieren.tempjobdjango.logging.enabled ) }} 2>&1 | while IFS= read -r line; do echo \"$(date '+%Y-%m-%d %H:%M:%S') $line\"; done  | tee -a /app/log/tempjobdjango.log{{ end }}"]
           # End job commands 
           resources:
           {{- toYaml .Values.openformulieren.tempjobdjango.resources | nindent 12 }} 
