--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1727,7 +1727,7 @@ kiss:
       name: ""
     image:
       repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-      tag: "release-1.1.x-20250731163435-40bff18"
+      tag: "1.2.0"
       pullPolicy: IfNotPresent
     resources:
       requests:
