--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1837,11 +1837,11 @@ zac:
     code: "007"
     naam: "Example Gemeente"
     mail: "noreply@example.nl"
-  # ghcr.io/infonl/zaakafhandelcomponent:3.10.0
+  # ghcr.io/infonl/zaakafhandelcomponent:3.10.0-1
   image:
     #repository: ghcr.io/infonl/zaakafhandelcomponent
     pullPolicy: IfNotPresent
-    tag: 3.10.0
+    tag: 3.10.0-1
   initContainer:
     enabled: true
     # curlimages/curl:8.15.0
