Podiumd 4.2.2 release branch (#127)
# 🚀 PodiumD Helm Chart Update to v4.2.2


## 📋 Component Updates

| Component | Previous Version | New Version | 
|-----------|-----------------|-------------|
| Open Inwoner | 1.32.0 | 1.32.1 |
| Contact | 1.1.x | 1.2.0 |
| ZAC | 3.10.0 | 3.10.0-1 |

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1573,7 +1573,7 @@ openinwoner:
   persistentVolume:
     volumeAttributeShareName: openinwoner
   image:
-    tag: "1.32.0"
+    tag: "1.32.1"
   resources:
     requests:
       cpu: 200m
@@ -1632,7 +1632,9 @@ openinwoner:
 
 kisselastic:
   kibanaDomain: kiss-kb-http.podiumd.svc.cluster.local:5601
+  # -- install crds using https://github.com/elastic/cloud-on-k8s/blob/main/deploy/eck-operator/charts/eck-operator-crds/templates/all-crds.yaml
   eck-operator:
+    installCRDs: false
     managedNamespaces:
       - podiumd
 
@@ -1725,7 +1727,7 @@ kiss:
       name: ""
     image:
       repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-      tag: "release-1.1.x-20250731163435-40bff18"
+      tag: "1.2.0"
       pullPolicy: IfNotPresent
     resources:
       requests:
@@ -1835,11 +1837,11 @@ zac:
     code: "007"
     naam: "Example Gemeente"
     mail: "noreply@example.nl"
-  # ghcr.io/infonl/zaakafhandelcomponent:3.10.0
+  # ghcr.io/infonl/zaakafhandelcomponent:3.10.0-1
   image:
     #repository: ghcr.io/infonl/zaakafhandelcomponent
     pullPolicy: IfNotPresent
-    tag: 3.10.0
+    tag: 3.10.0-1
   initContainer:
     enabled: true
     # curlimages/curl:8.15.0
@@ -1903,6 +1905,7 @@ zac:
     fixedUserName: ""
   # solr operator settings
   solr-operator:
+    # -- install crds using https://solr.apache.org/operator/downloads/crds/v0.10.0-prerelease/all-with-dependencies.yaml
     # -- turn functionality on/off
     enabled: true
     # apache/solr-operator:v0.9.1
@@ -1931,7 +1934,10 @@ zac:
           tag: 8.14.1
     # -- namespaces to watch for solr-operator
     watchNamespaces: "podiumd"
+    # -- install crds using https://github.com/pravega/zookeeper-operator/blob/master/charts/zookeeper-operator/templates/zookeeper.pravega.io_zookeeperclusters_crd.yaml
     zookeeper-operator:
+      crd:
+        create: false
       hooks:
         # lachlanevenson/k8s-kubectl:v1.25.4
         image:
@@ -2099,3 +2105,4 @@ serviceAccount:
   automount: true
   annotations: {}
   name: ""
+
