--- a/charts/beproeving/values.yaml
+++ b/charts/beproeving/values.yaml
@@ -20,132 +20,117 @@
 #     # the base url of the openzaak api's
 #     apiBaseUrl: "http://openzaak.example.com"
 
-# Global PostgreSQL configuration
-postgresql:
+internetaakafhandeling:
   enabled: true
-  # image:
-  #   repository: bitnamilegacy/postgresql
-  auth:
-    username: "postgres"
+  # Global PostgreSQL configuration
+  postgresql:
+    enabled: false
+
+  # Ingress Configuration
+  ingress:
+    enabled: false
+
+  # Database Configuration
+  database:
+    # When postgresql.enabled=true, host is auto-set to {Release.Name}-postgresql
+    # Specify this host only when postgresql.enabled=false
+    # host: ""
+    # port: "5432"
+    host: ""
+    name: "ita"
+    username: "ita"
     password: "SECRET__SECRET__SECRET"
-    database: "ita"
-    postgresPassword: "SECRET__SECRET__SECRET"
-  # primary:
-  #   persistence:
-  #     enabled: true
-  #     size: 8Gi
-  # metrics:
-  #   enabled: false
-  #   image:
-  #     repository: bitnamilegacy/postgres-exporter
-  # volumePermissions:
-  #   image:
-  #     repository: bitnamilegacy/os-shell
 
-# Ingress Configuration
-ingress:
-  enabled: false
+  # API Connections
+  apiConnections:
+    openKlant:
+      baseUrl: "https://ontw-openklant.dimpact.icatt.nl/klantinteracties/api/v1/"
+      apiKey: "SECRET__SECRET__SECRET"
+    object:
+      baseUrl: "https://ontw-objecten.dimpact.icatt.nl/api/v2/"
+      apiKey: "SECRET__SECRET__SECRET"
+    zaakSysteem:
+      baseUrl: "https://ontw-openzaak.dimpact.icatt.nl"
+      clientId: "ita"
+      key: "SECRET__SECRET__SECRET"
 
-# Database Configuration
-database:
-  # When postgresql.enabled=true, host is auto-set to {Release.Name}-postgresql
-  # Specify this host only when postgresql.enabled=false
-  # host: ""
-  # port: "5432"
-  name: "ita"
-  username: "ita"
-  password: "SECRET__SECRET__SECRET"
+  logboek:
+    type: "https://ontw-objecttypen.dimpact.icatt.nl/api/v2/objecttypes/1eaa9001-aa93-466f-b920-ad9caccf115b"
+    typeVersion: 1
 
-# API Connections
-apiConnections:
-  openKlant:
-    baseUrl: "https://ontw-openklant.dimpact.icatt.nl/klantinteracties/api/v1/"
-    apiKey: "SECRET__SECRET__SECRET"
-  object:
-    baseUrl: "https://ontw-objecten.dimpact.icatt.nl/api/v2/"
-    apiKey: "SECRET__SECRET__SECRET"
-  zaakSysteem:
-    baseUrl: "https://ontw-openzaak.dimpact.icatt.nl"
-    clientId: "ita"
-    key: "SECRET__SECRET__SECRET"
+  afdeling:
+    type: "https://ontw-objecttypen.dimpact.icatt.nl/api/v2/objecttypes/c8d301f9-80b8-4575-8b29-3e9431f92994"
+    typeVersion: 1
 
-logboek:
-  type: "https://ontw-objecttypen.dimpact.icatt.nl/api/v2/objecttypes/1eaa9001-aa93-466f-b920-ad9caccf115b"
-  typeVersion: 1
+  groep:
+    type: "https://ontw-objecttypen.dimpact.icatt.nl/api/v2/objecttypes/cbec27ac-157b-490b-b586-9e8a8f5bbb85"
+    typeVersion: 1
 
-afdeling:
-  type: "https://ontw-objecttypen.dimpact.icatt.nl/api/v2/objecttypes/c8d301f9-80b8-4575-8b29-3e9431f92994"
-  typeVersion: 1
+  smtp:
+    host: ""
+    port: "25"
+    username: ""
+    password: "SECRET__SECRET__SECRET"
+    fromEmail: ""
+    enableSsl: "true"
 
-groep:
-  type: "https://ontw-objecttypen.dimpact.icatt.nl/api/v2/objecttypes/cbec27ac-157b-490b-b586-9e8a8f5bbb85"
-  typeVersion: 1
-
-smtp:
-  host: ""
-  port: "25"
-  username: ""
-  password: "SECRET__SECRET__SECRET"
-  fromEmail: ""
-  enableSsl: "true"
-
-# Web Application Configuration
-web:
-  image:
-    # repository: "ghcr.io/interne-taak-afhandeling/internetaakafhandeling.web"
-    # tag: "1.0.0"
-    pullPolicy: Always
-  
-  # service:
-  #   type: ClusterIP
-  #   port: 80
-  
-  # Database initialization configuration
-  initContainer:
-    enabled: true
+  # Web Application Configuration
+  web:
     image:
-      repository: "postgres"
-      tag: "15"
-      pullPolicy: "IfNotPresent"
-    resources:
-      requests:
-        cpu: "100m"
-        memory: "128Mi"
-      limits:
-        cpu: "200m"
-        memory: "256Mi"
-  
-  oidc:
-    authority: "https://ontw-keycloak-admin.dimpact.icatt.nl/realms/podiumd"
-    clientId: "ita"
-    clientSecret: "SECRET__SECRET__SECRET"
-    itaSystemAccessRole: "ITA-Gebruiker"
-    nameClaimType: "name"
-    roleClaimType: "groups"
-    objectregisterMedewerkerIdClaimType: "preferred_username"
-    emailClaimType: "email"
-  
-  # resources:
-  #   logoUrl: ""
-  #   faviconUrl: ""
-  #   designTokensUrl: ""
-  #   webFontSources: []
-  
-  # appsettings:
-  #   setting1: ""
-  #   setting2: ""
+      # repository: "ghcr.io/interne-taak-afhandeling/internetaakafhandeling.web"
+      # tag: "1.0.0"
+      pullPolicy: Always
+    
+    # service:
+    #   type: ClusterIP
+    #   port: 80
+    
+    # Database initialization configuration
+    initContainer:
+      enabled: true
+      image:
+        repository: "postgres"
+        tag: "15"
+        pullPolicy: "IfNotPresent"
+      resources:
+        requests:
+          cpu: "100m"
+          memory: "128Mi"
+        limits:
+          cpu: "200m"
+          memory: "256Mi"
+    
+    oidc:
+      authority: "https://ontw-keycloak-admin.dimpact.icatt.nl/realms/podiumd"
+      clientId: "ita"
+      clientSecret: "SECRET__SECRET__SECRET"
+      itaSystemAccessRole: "ITA-Gebruiker"
+      nameClaimType: "name"
+      roleClaimType: "groups"
+      objectregisterMedewerkerIdClaimType: "preferred_username"
+      emailClaimType: "email"
+    
+    # resources:
+    #   logoUrl: ""
+    #   faviconUrl: ""
+    #   designTokensUrl: ""
+    #   webFontSources: []
+    
+    # appsettings:
+    #   setting1: ""
+    #   setting2: ""
 
-# Poller Configuration
-poller:
-  schedule: "*/2 * * * *"
-  # schedule: "*/15 * * * *"
+  # Poller Configuration
+  poller:
+    schedule: "*/2 * * * *"
+    # schedule: "*/15 * * * *"
 
-  
-  image:
-    # repository: "ghcr.io/interne-taak-afhandeling/internetaakafhandeling.poller"
-    tag: "1.0.0"
-    pullPolicy: Always
-  
-  notification:
-    pollerMessage: "Poller uitgevoerd om:"
-    hourThreshold: "-24"
+    
+    image:
+      # repository: "ghcr.io/interne-taak-afhandeling/internetaakafhandeling.poller"
+      # tag: "1.0.0"
+      pullPolicy: Always
+    
+    notification:
+      pollerMessage: "Poller uitgevoerd om:"
+      hourThreshold: "-24"
