--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -69,4 +69,8 @@ dependencies:
     condition: zac.enabled
     tags:
       - zaak
+  - name: zgw-office-addin
+    repository: "@zgw-office-addin"
+    version: 0.0.25
+    condition: zgw-office-addin.enabled
 
