Added zgw-office-addin helm repo

--- a/.github/workflows/podiumd-test-podiumd-helm-chart-changes.yaml
+++ b/.github/workflows/podiumd-test-podiumd-helm-chart-changes.yaml
@@ -23,6 +23,7 @@ jobs:
         helm repo add kiss-elastic https://raw.githubusercontent.com/Klantinteractie-Servicesysteem/.github/main/docs/scripts/elastic
         helm repo add maykinmedia https://maykinmedia.github.io/charts/
         helm repo add wiremind https://wiremind.github.io/wiremind-helm-charts
+        helm repo add zgw-office-addin https://infonl.github.io/zgw-office-addin
     
     - name: bake deployment
       id: bake
