--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -498,7 +498,7 @@ data:
               claim.name: "client_id"
               jsonType.label: "String"
 	  - clientId: ita
-	    name: Internaal Taak Afhandelcomponent
+	    name: Interne Taak Afhandeling
 	    enabled: true
 	    clientAuthenticatorType: client-secret
 	    redirectUris:
@@ -506,6 +506,22 @@ data:
 	    webOrigins:
 	      - "{{ .Values.ita.configuration.oidcUrl }}/*"
 	    secret: {{ .Values.ita.configuration.oidcSecret | quote }}
+		protocolMappers:
+		  - name: "client roles"
+		    protocol: "openid-connect"
+			protocolMapper: "oidc-usermodel-client-role-mapper"
+			consentRequired: false
+			config:
+			  introspection.token.claim: "true"
+			  multivalued: "true"
+			  userinfo.token.claim: "false"
+			  id.token.claim: "true"
+			  user.atttribute: "foo"
+			  lightweight.claim: "false"
+			  access.token.claim: "true"
+			  claim.name: "groups"
+			  jsonType.label: "String"
+			  usermodel.clientRoleMapping.clientId: "ita"			  
     clientScopes:
       - name: roles
         description: OpenID Connect scope for add user roles to the access token
@@ -564,11 +580,6 @@ data:
             - "view-users"
           account:
             - "view-groups"
-      - username: "service-account-monitoring"
-        enabled: "true"
-        totp: "false"
-        serviceAccountClientId: "monitoring"
-
     smtpServer:
       starttls: {{ .Values.keycloak.config.smtp.starttls }}
       port: {{ .Values.keycloak.config.smtp.port }}
@@ -619,6 +630,8 @@ data:
           - name: raadpleger
           - name: recordmanager
           - name: domein_elk_zaaktype
+		ita:
+		  - name: ITA-Gebruiker
     {{- end }}
     {{- if not .Values.keycloak.config.skipGroups }}
     groups:
@@ -639,6 +652,8 @@ data:
             - "behandelaar"
           abc:
             - "administrators"
+		  ita:
+			- "ITA-Gebruiker"
           monitoring:
             - "admin"
           objecten:
