--- a/charts/beproeving/values.yaml
+++ b/charts/beproeving/values.yaml
@@ -1,6 +1,6 @@
 
 zgw-office-addin:
-  enabled: true
+  enabled: false
   fullnameOverride: "zgw-office-addin"
   frontend:
     # ghcr.io/infonl/zgw-office-add-in-frontend:v0.0.205
