--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -69,5 +69,9 @@ dependencies:
     condition: zac.enabled
     tags:
       - zaak
+  - name: zgw-office-addin
+    repository: "@zgw-office-addin"
+    version: 0.0.31
+    condition: zgw-office-addin.enabled
 
 
