--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1959,6 +1959,29 @@ zac:
     clientId: zac
     secret: changeme
 
+zgw-office-addin:
+  enabled: true
+  fullnameOverride: "zgw-office-addin"
+  frontend:
+    # ghcr.io/infonl/zgw-office-add-in-frontend:v0.0.299
+    image:
+      tag: v0.0.299
+    # the public url where manifest.xml and static js files are served
+    frontendUrl: https://office-addin.example.nl
+    # by default this is not needed as it is proxied by the frontend host
+    backendPublicUrl: ""
+    # can be enabled if needed, if for instance you don't want an ingress
+    enableHttps: false
+  backend:
+    # ghcr.io/infonl/zgw-office-add-in-backend:v0.0.299
+    image:
+      tag: v0.0.299
+    # secret that is configured in openzaak
+    jwtSecret: "my openzaak-office-addin-zgw-api-key"
+    # the base url of the openzaak zgw api's
+    apiBaseUrl: "https://openzaak.example.nl"
+
+
 clamav:
   image:
     tag: "1.4.2"
