--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -73,5 +73,10 @@ dependencies:
     repository: "@zgw-office-addin"
     version: 0.0.31
     condition: zgw-office-addin.enabled
+  - name: internetaakafhandeling
+    alias: ita
+    repository: "oci://ghcr.io/interne-taak-afhandeling/internetaakafhandeling"
+    version: 1.0.0
+    condition: ita.enabled
 
 
