--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -502,10 +502,10 @@ data:
         enabled: true
         clientAuthenticatorType: client-secret
         redirectUris:
-          - "{{ .Values.ita.configuration.oidcUrl }}/*"
+          - "{{ .Values.ita.web.oidc.frontendUrl }}/*"
         webOrigins:
-          - "{{ .Values.ita.configuration.oidcUrl }}/*"
-        secret: {{ .Values.ita.configuration.oidcSecret | quote }}
+          - "{{ .Values.ita.web.oidc.frontendUrl }}/*"
+        secret: {{ .Values.ita.web.oidc.clientSecret | quote }}
         protocolMappers:
           - name: "client roles"
             protocol: "openid-connect"
